--- a/package.json
+++ b/package.json
@@ -2,6 +2,14 @@
   "name": "@danielrebolledo/cafe-ipdh-lib",
   "version": "1.1.0",
   "description": "Librería para gestionar impresoras fiscales y de recibos (AEG-R1, DTP, etc.)",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rezpo/cafe-ipdh-lib.git"
+  },
+  "homepage": "https://github.com/rezpo/cafe-ipdh-lib#readme",
+  "bugs": {
+    "url": "https://github.com/rezpo/cafe-ipdh-lib/issues"
+  },
   "type": "module",
   "main": "./dist/index.js",
   "module": "./dist/index.js",
